# device-frames-core

./: .gitignore  INFO.md  LICENSE  README.md  apply_frame.py  example_batch.py  list_devices_and_frame_sizes.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: updatePyPi.yml
api/: __init__.py  main.py  routes.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  REFACTORING_SUMMARY.md  TODO.MD  deployment.md  pypi.md
engine/: __init__.py  apply_frame.py  color.py  templates.py
src/device_frames_core/: __init__.py  core.py  errors.py
tests/: test.py
